styles/styles.scss
/* ... */
.github-link {
  width: max-content;
}

textarea.form-control {
  border-radius: math.div($m, 2);
}

.marked-render {
  word-wrap: break-word;
  img {
    max-width: 100%;
  }
}

.comment {
  a {
    color: var(--bs-primary);
  }

  img {
    max-width: 100%;
  }
}

.main-nav-link {
  font-size: 12px;
  line-height: 71%;
  letter-spacing: 0.1em;
}

.status-bar-text {
  font-size: 10px;
  line-height: 130%;
  letter-spacing: 0.1em;
}

.list-actions {
  background-color: $bg;
  border-radius: 0;

  &.sticky-top {
    padding: 20px 0;
    top: 4.35em;
  }

  .input-group {
    border: 2px solid transparent;
    
    .input-group-text {
      border-top-left-radius: math.div($m, 2);
      border-bottom-left-radius: math.div($m, 2);
    }

    &:hover {
      border: 2px solid $ligth-gray;
    }

    &:focus-within {
      border-color: var(--bs-primary);

      .input-group-text {
        border: 0 !important;
        background-color: $black;
      }
    }

    input {
      border: 0;

      &:focus {
        border: 0;
        background-color: $black;
      }
    }

    button {
      background-color: $black;
      border-top-right-radius: math.div($m, 2);
      border-bottom-right-radius: math.div($m, 2);

      svg {
        color: var(--bs-primary);
        width: 10px;
      }
    }
  }

  button {
    border: 2px solid transparent;

    &:hover {
      border-color: $ligth-gray;
    }
  }

  .react-select-container,
  .react-select__control,
  .react-select__currency,
  .react-select__menu {
    color: var(--bs-gray);
    min-width: 170px !important;
  }

  .react-select__single-value {
    font-family: "Space Grotesk", sans-serif !important;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    font-size: 12px;
    text-align: center;
  }
}

.scroll-top-button {
  position: fixed;
  bottom: 50px;
  right: 20px;
  z-index: 99;

  background-color: transparent;
  border: none;

  svg {
    circle {
      stroke: var(--bs-primary);
    }
  }
}

.gap-20 {
  gap: 20px;

  .btn + .btn {
    margin: 0;
  }
}

.sticky-bounty {
  position: sticky;
  top: 90px;
}

.pullrequest-labels {
  width: max-content;
  height: max-content;
}

.pullrequest-labels + .pullrequest-labels {
  margin-left: math.div($m, 2);
}

@each $color, $value in $theme-colors {
  .hover-#{$color} {
    &:hover {
      color: $value !important;
    }
  }
}

.line {
  height: 1px;
}

.image-uploader {
  height: 100px;
  width: 100px;

  &.lg {
    width: 200px;
    height: 100px;
  }

  &.error {
    border: 1px solid var(--bs-danger);
  }

  color: $ligth-gray;
  cursor: pointer;

  svg {
    width: 14px;
    height: 14px;

    path {
      fill: $ligth-gray;
    }
  }
}

.color-light-gray {
  color: $ligth-gray
}

.custom-color-input-wrapper {
  padding: 10px 20px;


  .custom-color-input {
    width: 25px;
    height: 25px;

    border-radius: 50%;
    border: 2px solid $white;

    &.is-invalid {
      border: 2px solid var(--bs-fail);
    }

    overflow: hidden;
  }
}

input[type="color"] {
  padding: 0;
  width: 150%;
  height: 150%;
  margin: -25%;

  border: none;
}

.repositories-list {
  gap: 10px;
}

.svg-with-text-color {
  .text {
    &-primary {
      svg {
        path {
          fill: var(--bs-primary);
        }
      }
    }
    &-danger {
      svg {
        path {
          fill: var(--bs-danger);
        }
      }
    }
    &-purple {
      svg {
        path {
          fill: $purple;
        }
      }
    }
    &-ligth-gray {
      svg {
        path {
          fill: $ligth-gray;
        }
      }
    }
    &-gray-hover:hover {
      svg {
        path {
          fill: $gray;
        }
      }
    }
  }
}

.input-group {
  padding-left: 0;
  padding-right: 0;

  &,
  > input {
    border-radius: math.div($m, 2);
  }

  > input {
    border-right: none !important;
  }

  &:focus-within {
    .input-group-text {
      border-left: none !important;
      background-color: $bg;

      &:not(.border) {
        border: 1px solid var(--bs-primary);
        border-left: none;
      }
    }
  }
}

.amount-input {
  .input-group {
    padding-left: 0;
    padding-right: 0;

    &,
    > input {
      border-radius: math.div($m, 2);
    }

    > input {
      padding: 18px 20px;
      border-right: none !important;
    }

    &:focus-within {
      .input-group-text {
        border-left: none !important;
        background-color: $bg;

        &:not(.border) {
          border: 1px solid var(--bs-primary);
          border-left: none;
        }
      }
    }
  }

  .text {
    &-primary {
      svg {
        path {
          fill: var(--bs-primary);
        }
      }
    }
    &-success {
      svg {
        path {
          fill: var(--bs-success);
        }
      }
    }
    &-danger {
      svg {
        path {
          fill: var(--bs-danger);
        }
      }
    }
    &-purple {
      svg {
        path {
          fill: $purple;
        }
      }
    }
  }
}

.p-20 {
  padding: 20px;
}

.read-only-network {
  .read-only-wrapper {
    cursor: not-allowed !important;
  }

  .read-only-button {
    pointer-events: none !important;
  }
}

.read-only-button-mobile {
  pointer-events: none !important;
}

.svg {
  &-primary {
    svg {  
      path {
        fill: var(--bs-primary);
      }
    }
  }
  &-success {
    svg {  
      path {
        fill: var(--bs-success);
      }
    }
  }
  &-danger {
    svg {  
      path {
        fill: var(--bs-danger);
      }
    }
  }
  &-warning {
    svg {  
      path {
        fill: var(--bs-warning);
      }
    }
  }
}

.nav-link-gradient {
  background: linear-gradient(to right, #9669ED -0.33%, #FF6A2C 50.71%, #4250E4 99.67%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  width: fit-content;
  font-weight: bold;
  background-size: 200% 200%;
  
  animation: grandient-loop 3s ease-in-out infinite;
}
/* ... */

